--- a/00-db-connection-test.Rmd
+++ b/00-db-connection-test.Rmd
@@ -39,7 +39,7 @@ example_view_facets <- data_local_raw %>%
   group_by(island) %>%
   group_map(~group_by(., species) %>%  count())
 
-facets
+example_view_facets
 ```
 
 # Connect to DB
@@ -62,7 +62,10 @@ con # <- this is the currently open connection
 
 ```{r}
 if (!"penguins" %in% db_tables) {
+  print("Writing table `penguins` to DB")
   DBI::dbWriteTable(con, name = "penguins", value = data_local_raw)
+} else {
+  print("Skipping. table `penguins` already exists in DB")
 }
 ```
 
