--- a/00-db-connection-test.Rmd
+++ b/00-db-connection-test.Rmd
@@ -2,14 +2,12 @@
 title: "R Notebook"
 ---
 
-## title: "R Notebook"
-
 ```{r}
 # install.packages("palmerpenguins")
 library(tidyverse)
 ```
 
-# Load Penguin Data (Local Copy)
+## Load Penguin Data (Local Copy)
 
 ```{r}
 data_local_raw <- palmerpenguins::penguins
@@ -19,9 +17,9 @@ data_local_raw <- palmerpenguins::penguins
 head(data_local_raw)
 ```
 
-# Example Aggergations
+## Example Aggergations
 
-## Simple Group By / Count
+### Simple Group By / Count
 
 ```{r}
 example_view_simple <- data_local_raw %>%
@@ -29,7 +27,7 @@ example_view_simple <- data_local_raw %>%
   count()
 ```
 
-## Faceting, a list of Group/Counts, Split by Island
+### Faceting, a list of Group/Counts, Split by Island
 
 ```{r}
 example_view_facets <- data_local_raw %>%
@@ -39,7 +37,7 @@ example_view_facets <- data_local_raw %>%
 example_view_facets
 ```
 
-# Connect to DB
+## Connect to DB
 
 ```{r}
 # con <- DBI::dbConnect()
@@ -47,13 +45,13 @@ source(here::here("R", "00-connect-to-coolify.R"))
 con # <- this is the currently open connection
 ```
 
-## Get existing table names from DB
+### Get existing table names from DB
 
 ```{r}
 (db_tables <- DBI::dbListTables(con))
 ```
 
-## Write Local Copy of Pengunis Data to Remote DB
+### Write Local Copy of Pengunis Data to Remote DB
 
 > ! only do so if table does not exist in remote DB !
 
@@ -66,7 +64,7 @@ if (!"penguins" %in% db_tables) {
 }
 ```
 
-## Read remote Penguins data from DB
+### Read remote Penguins data from DB
 
 ```{r}
 data_remote_raw <- DBI::dbReadTable(con, "penguins")
@@ -74,13 +72,13 @@ data_remote_raw <- DBI::dbReadTable(con, "penguins")
 head(data_remote_raw)
 ```
 
-## Compare local and remote data with `waldo`
+### Compare local and remote data with `waldo`
 
 ```{r}
 waldo::compare(data_local_raw, data_remote_raw)
 ```
 
-# Import: Disconnect from DB
+## Important: Disconnect from DB
 
 ```{r}
 DBI::dbDisconnect(con)
